# rug-pull-detector

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
reports/: methodology.md  training_results.json
scripts/: migrate_graph_cache.py  refetch_mints_burns.py
sql/: 01_pool_events.sql  02_holder_concentration.sql  03_features.sql  04_labels.sql  schema.sql
src/rug_detector/: __main__.py  config.py  db.py  features.py  label.py  model.py  score.py
src/rug_detector/etl/: etherscan.py  runner.py  thegraph.py
tests/: test_cache_key.py  test_features.py  test_labels.py
